--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,11 @@
 </head>
 
 <style>
+    .search_bar {
+        padding-bottom: 50px;
+    }
     .media-list{
+        padding-top: 50px;
         list-style: none;
         margin-top: 0;
         margin-bottom: 0;
@@ -28,6 +32,8 @@
         padding-left: 8px;
         padding-right: 8px;
         box-sizing: 33.3333333333%;
+        height: 450px;
+        padding-bottom: 50px;
     }
     .responsive_image {
         height: 0;
@@ -49,41 +55,18 @@
         </h1>
     </div>
 
-    <form method="GET" action="/get_news">
+    <form method="GET" action="/get_news" class="search_bar">
         <div>
             <label for="char1"> What do you want to search? </label>
             <input type="text" name="char1">
         </div>
     </form>
     <div>
-        <p>
-            {% if start == True %}
-                <div class="container">
-                    <ul class="media-list">
-                        {% for new, des, i, s in context %}
-                        <li class="media-list-item">
-                            <div class="media">
-                                <div class="media_image">
-                                    <div class="responsive_image">
-                                        <img src="{{i}}" alt = "">
-                                    </div>
-                                </div>
-                                <div class="media_content">
-                                    <h3 class="media_title">{{new}}</h3>
-                                </div>
-                                <p class="media_summary">
-                                    {{des}}
-                                </p>
-                                <a href="" class="media_source"> {{s}} </a>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% else %}
+        {% if start == True %}
             <div class="container">
                 <ul class="media-list">
                     {% for new, des, i, s in context %}
+                    
                     <li class="media-list-item">
                         <div class="media">
                             <div class="media_image">
@@ -103,8 +86,30 @@
                     {% endfor %}
                 </ul>
             </div>
-            {% endif %}
-        </p>
+        {% else %}
+        <div class="container">
+            <ul class="media-list">
+                {% for new, des, i, s in context %}
+                <li class="media-list-item">
+                    <div class="media">
+                        <div class="media_image">
+                            <div class="responsive_image">
+                                <img src="{{i}}" alt = "">
+                            </div>
+                        </div>
+                        <div class="media_content">
+                            <h3 class="media_title">{{new}}</h3>
+                        </div>
+                        <p class="media_summary">
+                            {{des}}
+                        </p>
+                        <a href="" class="media_source"> {{s}} </a>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
     </div>
     
 
